# dark-triad

./: .gitignore  LICENSE  README.md  TDT_HARDENING_LOG.md  TDT_SETUP_LOG.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DECEPTICON_ANALYSIS.md  NAVMAX_MODULE_MAP.md
scripts/: exclude-defender.ps1
src/tdt/: __init__.py
src/tdt/agents/: __init__.py  ad_specialist.py  base.py  evader.py  exploiter.py  orchestrator.py  post_exploit.py  recon.py  registry.py
src/tdt/api/: __init__.py  app.py
src/tdt/api/static/: dashboard.html
src/tdt/benchmark/: __init__.py  runner.py
src/tdt/cli/: __init__.py  main.py
src/tdt/core/: __init__.py  ai_router.py  personality.py  resilience.py  sandbox.py  tool_registry.py
src/tdt/knowledge/: __init__.py  graph.py
src/tdt/machiavellianism/: __init__.py  engine.py
src/tdt/narcissism/: __init__.py  engine.py
src/tdt/orchestrator/: __init__.py  battle_manager.py  engagement.py  mission_planner.py  shared.py
src/tdt/psychopathy/: __init__.py  engine.py
tests/: conftest.py  test_ad_specialist.py  test_ai_router.py  test_api.py  test_benchmark.py  test_narcissus_engine.py  test_orchestrator.py  test_personality.py  test_sandbox.py  test_tool_registry.py
